--- a/Index.html
+++ b/Index.html
@@ -17,9 +17,9 @@
 		<h1> Ambitious Information Technology Professional </h1>
 		<img src="images/Nate.jpg" alt= "Nate" style="width:100%; height:auto; margin:0 auto;">
 			<h2> "You miss 100% of the shots you don't take -Wayne Gretzky" - Michael Scott  </h2>
-		<h3> Who Am I? </h3>
+		<h1> Who Am I? </h1>
 			<p id="About"> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019. I currently live in Davie, Florida, but I am originally from Muskegon, MI. Some of my hobbies (when I'm not being a "Computer Wizard" as my wife, Ariel, has titled me) include lifting weights, playing video games, reading, and watching TV shows with my wife. We're currently very into the Food Network. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
-		<h4 id="My Skills"> My Skills </h4>
+		<h1 id="My Skills"> My Skills </h1>
 			 <ul>
   				<li>Hardware and software troubleshooting and repair</li>
   				<li>System Administrator duties (Active Directory, SCCM, application package buidling, OS deployments)</li>
@@ -29,11 +29,9 @@
   				<li>Cyber Security investigation</li>
   				<li>And more!</li>
 			</ul> 
-		<h5 id="Resume"> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank"><span class="a"> View </span> </a> </h5>
-		<h6 id="Contact"> Contact Information </h6> 
-		<a href="https://www.linkedin.com/in/nathan-goodman-a81051142/">
-  			<img src="" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
-		</a>
+		<h1 id="Resume"> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank"><span class="a"> View </span> </a> </h1>
+		<h1 id="Contact"> Contact Information </h1> 
+		<h3> <a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"><span class="a"> LinkedIn </span> </a> <a href="https://github.com/nategoodman88"><span class="a"> GitHub </span> </a><a href="mailto:nategoodman88@gmail.com"><span class ="a"> Email </span> </a> </h3>
 	</body>
 
 </html>
