--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 		<img src="images/Nate.jpg" alt= "Nate" style="width:100%; height:auto; margin:0 auto;">
 			<h2> "You miss 100% of the shots you don't take -Wayne Gretzky" - Michael Scott  </h2>
 		<h1> Who Am I? </h1>
-			<p id="About"> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019. I currently live in Davie, Florida, but I am originally from Muskegon, MI. Some of my hobbies (when I'm not being a "Computer Wizard" as my wife, Ariel, has titled me) include lifting weights, playing video games, reading, and watching TV shows with my wife. We're currently very into the Food Network. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
+			<p id="About"> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Docotor of Optometry program. My long term goal is to end up in a high level IT Security position. I believe this area of IT is one of the most important, and I want to be able to use my knowledge to do something that is continuously and actively making a difference. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into the Food Network, and our favorite shows is Best Baker in America. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
 		<h1 id="My Skills"> My Skills </h1>
 			 <ul>
   				<li>Hardware and software troubleshooting and repair</li>
   				<li>System Administrator duties (Active Directory, SCCM, application package buidling, OS deployments)</li>
   				<li>Programming experience in multiple programming languages, including Java, Python, HTML, CSS, and Javascript (in fact, this website was coded from scratch!)</li>
   				<li>Microsoft Office support</li>
-  				<li>Customer Support</li>
+  				<li>Customer support</li>
   				<li>Cyber Security investigation</li>
+  				<li>Retail experience</li>
   				<li>And more!</li>
 			</ul> 
 		<h1 id="Resume"> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank"><span class="a"> View </span> </a> </h1>
