--- a/index.html
+++ b/index.html
@@ -5,34 +5,55 @@
 		<title> Nate Goodman </title>
 			<link rel="stylesheet" type="text/css" href="Style.css">
 			<link rel="shortcut icon" type="image/ico" href="images/computer.ico">
-		    <div class="topnav">
-  				<a href="#About">About</a>
-  				<a href="#My Skills">My Skills</a>
-  				<a href="#Resume">Resume</a>
-  				<a href="#Contact">Contact</a>
-			</div> 
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+			<script src="JSfunctions.js"></script>
+			<script src="Jquery.js"></script>
 	</head>
 
 	<body> 
-		<h1> Ambitious Information Technology Professional </h1>
-		<img src="images/Nate.jpg" alt= "Nate" style="width:100%; height:auto; margin:0 auto;">
+		<div class="hidden">
+			<h1> Ambitious Information Technology Professional </h1>
+		</div>
+		<div class="hidden2">
+			<img src="images/Nate.jpg" alt= "Nate" style="width:100%; height:auto; margin:0 auto;">
+	    </div>
+	    <div class="hidden3">
 			<h2> "You miss 100% of the shots you don't take -Wayne Gretzky" - Michael Scott  </h2>
+		</div>
+		 <div class="tab">
+  			<button class="tablink" onclick="openTab(event, 'About')">About</button>
+  			<button class="tablink" onclick="openTab(event, 'MySkills')">My Skills</button>
+  			<button class="tablink" onclick="openTab(event, 'Resume')">Resume</button>
+  			<button class="tablink" onclick="openTab(event, 'Contact')">Contact</button>
+		</div> 
+		<div id="About" class="tabcontent">
 		<h1> Who Am I? </h1>
-			<p id="About"> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Docotor of Optometry program. My long term goal is to end up in a high level IT Security position. I believe this area of IT is one of the most important, and I want to be able to use my knowledge to do something that is continuously and actively making a difference. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into the Food Network, and our favorite shows is Best Baker in America. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
-		<h1 id="My Skills"> My Skills </h1>
-			 <ul>
-  				<li>Hardware and software troubleshooting and repair</li>
-  				<li>System Administrator duties (Active Directory, SCCM, application package buidling, OS deployments)</li>
-  				<li>Programming experience in multiple programming languages, including Java, Python, HTML, CSS, and Javascript (in fact, this website was coded from scratch!)</li>
-  				<li>Microsoft Office support</li>
-  				<li>Customer support</li>
-  				<li>Cyber Security investigation</li>
-  				<li>Retail experience</li>
-  				<li>And more!</li>
-			</ul> 
-		<h1 id="Resume"> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank"><span class="a"> View </span> </a> </h1>
-		<h1 id="Contact"> Contact Information </h1> 
-		<h3> <a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"><span class="a"> LinkedIn </span> </a> <a href="https://github.com/nategoodman88"><span class="a"> GitHub </span> </a><a href="mailto:nategoodman88@gmail.com"><span class ="a"> Email </span> </a> </h3>
+			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Docotor of Optometry program. My long term goal is to end up in a high level IT Security position. I believe this area of IT is one of the most important, and I want to be able to use my knowledge to do something that is continuously and actively making a difference. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into the Food Network, and our favorite shows is Best Baker in America. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
+			<span onclick="this.parentElement.style.display='none'">x</span>
+		</div>
+		<div id="MySkills" class="tabcontent">
+			<h1> My Skills </h1>
+			 	<ul>
+  					<li>Hardware and software troubleshooting and repair</li>
+  					<li>System Administrator duties (Active Directory, SCCM, application package buidling, OS deployments)</li>
+  					<li>Programming experience in multiple programming languages, including Java, Python, HTML, CSS, and Javascript (in fact, this website was coded from scratch!)</li>
+  					<li>Microsoft Office support</li>
+  					<li>Customer support</li>
+  					<li>Cyber Security investigation</li>
+  					<li>Retail experience</li>
+  					<li>And more!</li>
+				</ul>
+			<span onclick="this.parentElement.style.display='none'">x</span>
+		</div> 
+		<div id="Resume" class="tabcontent">
+			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank"><span class="a"> View </span> </a> </h1>
+			<span onclick="this.parentElement.style.display='none'">x</span>
+	    </div>
+	    <div id="Contact" class="tabcontent">
+			<h1> Contact Information </h1> 
+				<h3> <a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"><span class="a"> LinkedIn </span> </a> <a href="https://github.com/nategoodman88"><span class="a"> GitHub </span> </a><a href="mailto:nategoodman88@gmail.com"><span class ="a"> Email </span> </a> </h3>
+			<span onclick="this.parentElement.style.display='none'">x</span>
+		</div>
 	</body>
 
 </html>
