--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div> 
 		<div id="Resume" class="tabcontent">
-			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank"><span class="a"> View </span> </a> </h1>
+			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank" style="color: #2EB1F8"> <span class="a"> View </span> </a> </h1>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 	    </div>
 	    <div id="Contact" class="tabcontent">
 			<h1> Contact Information </h1> 
-				<h3> <a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"><span class="a"> LinkedIn </span> </a> <a href="https://github.com/nategoodman88"><span class="a"> GitHub </span> </a><a href="mailto:nategoodman88@gmail.com"><span class ="a"> Email </span> </a> </h3>
+				<h3> <a href="https://www.linkedin.com/in/nathan-goodman-a81051142/" style="color: #2EB1F8"> <span class="a"> LinkedIn </span> </a> <a href="https://github.com/nategoodman88" style="color: #2EB1F8"> <span class="a"> GitHub </span> </a><a href="mailto:nategoodman88@gmail.com" style="color: #2EB1F8"> <span class ="a"> Email </span> </a> </h3>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
 	</body>
