--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
   			<button class="tablink" onclick="openTab(event, 'About')">About</button>
   			<button class="tablink" onclick="openTab(event, 'MySkills')">My Skills</button>
   			<button class="tablink" onclick="openTab(event, 'Resume')">Resume</button>
+			<button class="tablink" onclick="openTab(event, 'Portfolio')">Portfolio</button>
   			<button class="tablink" onclick="openTab(event, 'Contact')">Contact</button>
-			 <button class="tablink" onclick="openTab(event, 'Portfolio')">Portfolio</button>
+			
 		</div> 
 		
 		<div id="About" class="tabcontent">
 		<h1> Who Am I? </h1>
-			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. My long term goal is to end up in a high level IT Security position or a Web Development Position. I want to be able to use my knowledge to do something that is continuously and actively making a difference. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into the Food Network, and our favorite show is Best Baker in America. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
+			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. My long term goal is to end up in a Web Development Position. I want to be able to use my knowledge to do something that is continuously and actively making a difference. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into the Food Network, and our favorite show is Best Baker in America. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
 		
@@ -60,7 +61,7 @@
 		<div id="Portfolio" class="tabcontent">
 			<h1> Below are links to other websites I have created or worked on </h1>
 				<ul>
-					<li>https://pitathecat.com (WIP)</li>
+					<li> <a href="https://www.pitathecat.com style=" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
 				</ul>
 		</div>
 				
