--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div id="Portfolio" class="tabcontent">
 			<h1> Below are links to other websites I have created or worked on </h1>
 				<ul>
-					<li> <a href="https://www.pitathecat.com" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
+					<li> <a href="https://pitathecat.com" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
 				</ul>
 		</div>
 				
