--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 			<h1> Below are links to other websites I have created or worked on </h1>
 				<ul>
 					<li> <a href="https://pitathecat.com" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
+					<li> <a href="https://nateshorrorgaming.home.blog/" style="color: #2EB1F8"> <span class="a"> A Wordpress blog for me to talk about horror games (and for me to learn more about Wordpress' CMS) </li>
 				</ul>
 		</div>
 				
