--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		<div id="About" class="tabcontent">
 		<h1> Who Am I? </h1>
-			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. My long term goal is to end up in a Software Development Position. I want to be able to use my knowledge to do something that is continuously and actively making a difference. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into the Food Network, and our favorite show is Best Baker in America. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
+			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. My long term goal is to end up as a CIO, because I want to be able to use my knowledge to do something that is continuously and actively making a difference. Currently, I work with SCI Direct as a Support Specialist and I am attending Southern New Hampshire University online, pursuing a Master's degree in Information Technology Management. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing golf, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into the Food Network, and our favorite show is Best Baker in America. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
 		
@@ -62,8 +62,6 @@
 			<h1> Below are links to other websites I have created or worked on </h1>
 				<ul>
 					<li> <a href="https://pitathecat.com" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
-					<li> <a href="https://nateshorrorgaming.home.blog/" style="color: #2EB1F8"> <span class="a"> A Wordpress blog for me to talk about horror games (and for me to learn more about Wordpress' CMS) </li>
-				</ul>
 		</div>
 				
 	        <div id="Contact" class="tabcontent">
