--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</div> 
 		
 		<div id="Resume" class="tabcontent">
-			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/s/9oi0b0qpmsa6kuv/Resume.docx?dl=0/"target="_blank" style="color: #2EB1F8"> <span class="a"> View </span> </a> </h1>
+			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/h?preview=Resume.pdf"target="_blank" style="color: #2EB1F8"> <span class="a"> View </span> </a> </h1>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 	        </div>
 		
