--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		<div id="About" class="tabcontent">
 		<h1> Who Am I? </h1>
-			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. My long term goal is to end up in a Cyber Security role, because I want to be able to use my knowledge to do something that is continuously and actively making a difference. Currently, I work with SCI Direct as a Help Desk Analyst and I am attending Southern New Hampshire University online, pursuing a Master's degree in Information Technology with a concentration in Cyber Security. Some of my hobbies (when I'm not being a "Computer Wizard" as Ariel has titled me) include lifting weights, playing golf, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into Disney+. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
+			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. My long term goal is to end up in a Networking Engineer role with a focus in network automation, because I want to be able to use my knowledge to do something that is continuously and actively making a difference. Currently, I work with SCI Direct as a Help Desk Analyst and I am attending Southern New Hampshire University online, pursuing a Master's degree in Information Technology with a concentration in Cyber Security. Some of my hobbies include lifting weights, playing golf, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into Disney+. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten is the Bhut Jolokia, more commonly known as the Ghost Pepper. I am soon going to try and conquer the Trinidad Scorpion pepper! </p>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
 		
@@ -43,22 +43,22 @@
 			 	<ul>
   					<li>Hardware and software troubleshooting and repair</li>
   					<li>System Administrator duties (Active Directory, SCCM, application package buidling, OS deployments)</li>
-  					<li>Programming experience in multiple programming languages, including Java, Python, HTML, CSS, and Javascript (in fact, this website was coded from scratch!)</li>
+  					<li>Programming experience in multiple programming languages (in fact, this website was coded from scratch!)</li>
   					<li>Microsoft Office support</li>
   					<li>Customer support</li>
-  					<li>Cyber Security investigation</li>
+  					<li>Cyber Security and Networking</li>
   					<li>And more!</li>
 				</ul>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div> 
 		
 		<div id="Resume" class="tabcontent">
-			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/h?preview=Resume.pdf"target="_blank" style="color: #2EB1F8"> <span class="a"> View </span> </a> </h1>
+			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/home?preview=Resume.pdf"target="_blank" style="color: #2EB1F8"> <span class="a"> View </span> </a> </h1>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 	        </div>
 		
 		<div id="Portfolio" class="tabcontent">
-			<h1> Below are links to other websites I have created or worked on </h1>
+			<h1> Below are links to other programming projects I have worked on </h1>
 				<ul>
 					<li> <a href="https://pitathecat.com" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
 		</div>
