--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		<div id="About" class="tabcontent">
 		<h1> Who Am I? </h1>
-			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. My long term goal is to end up in an advanced Cyber Security role because I want to be able to use my knowledge to do something that is continuously and actively making a difference. Currently, I work with SCI as a Telecommunications Engineer and I am attending Southern New Hampshire University online, pursuing a master's degree in Information Technology with a concentration in Cyber Security. Some of my hobbies include lifting weights, playing golf, playing video games, reading Marvel comics, and watching TV shows with Ariel. We're currently very into Disney+. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten raw is the Bhut Jolokia, more commonly known as the Ghost Pepper. </p>
+			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelor of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. I have a great love for networking, telecommunications and cyber security. Currently, I work with SCI as a Telecommunications Engineer and I am attending Southern New Hampshire University online, pursuing a master's degree in Information Technology with a concentration in Cyber Security. Some of my hobbies include lifting weights, playing golf, playing video games, reading and watching TV shows with Ariel. We're currently very into Disney+. A quick fun fact about me is that I really enjoy spicy foods. The hottest pepper I've eaten raw is the Bhut Jolokia, more commonly known as the Ghost Pepper. </p>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
 		
@@ -43,8 +43,7 @@
 			 	<ul>
   					<li>System Administrator duties (Active Directory, SCCM, application package buidling, OS deployments)</li>
   					<li>Programming experience in multiple programming languages (in fact, this website was coded from scratch!)</li>
-  					<li>Networking</li>
-  					<li>Cisco Device Management</li>
+  					<li>Networking and Telecommunications</li>
   					<li>Cyber Security</li>
   					<li>And more!</li>
 				</ul>
@@ -56,12 +55,14 @@
 			<span onclick="this.parentElement.style.display='none'">x</span>
 	        </div>
 		
+		<!-- not using this right now, keeping for possible use later
 		<div id="Portfolio" class="tabcontent">
 			<h1> Below are links to other programming projects I have worked on </h1>
 				<ul>
 					<li> <a href="https://pitathecat.com" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
 		</div>
-				
+		-->
+		
 	        <div id="Contact" class="tabcontent">
 			<h1> Contact Information </h1> 
 				<h3> <a href="https://www.linkedin.com/in/nathan-goodman-a81051142/" style="color: #2EB1F8"> <span class="a"> LinkedIn </span> </a> <a href="https://github.com/nategoodman88" style="color: #2EB1F8"> <span class="a"> GitHub </span> </a><a href="mailto:nategoodman88@gmail.com" style="color: #2EB1F8"> <span class ="a"> Email </span> </a> </h3>
