--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   			<button class="tablink" onclick="openTab(event, 'About')">About</button>
   			<button class="tablink" onclick="openTab(event, 'MySkills')">My Skills</button>
   			<button class="tablink" onclick="openTab(event, 'Resume')">Resume</button>
-			<button class="tablink" onclick="openTab(event, 'Portfolio')">Portfolio</button>
+			<!--<button class="tablink" onclick="openTab(event, 'Portfolio')">Portfolio</button>-->
   			<button class="tablink" onclick="openTab(event, 'Contact')">Contact</button>
 			
 		</div> 
