--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		<div id="About" class="tabcontent">
 		<h1> Who Am I? </h1>
-			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelors of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. I have a great love for networking, telecommunications and cyber security. Currently, I work with SCI as a Telecommunications Engineer and I am attending Southern New Hampshire University online, pursuing a master's degree in Information Technology with a concentration in Cyber Security. Some of my hobbies include lifting weights, playing golf, playing video games and reading. </p>
+			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelors of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. I have a great love all things technology. Currently, I work with Service Corporation International (SCI) as a Telecommunications Engineer and I am attending Southern New Hampshire University online, pursuing a master's degree in Information Technology with a concentration in Cyber Security. Some of my hobbies include lifting weights, playing golf, playing video games and reading. </p>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
 		
