Changed some design

--- a/index.html
+++ b/index.html
@@ -12,62 +12,61 @@
 
 	<body> 
 		<div class="hidden">
-			<h1> Ambitious Information Technology Professional </h1>
+			<h1> Nate Goodman</h1>
 		</div>
-		
-		<div class="hidden2">
-			<img src="images/Nate.jpg" alt= "Nate" style="width:100%; height:auto; margin:0 auto;">
-	    </div>
-		
+
 	    <div class="hidden3">
-			<h2> "You miss 100% of the shots you don't take -Wayne Gretzky" - Michael Scott  </h2>
+			<h2> Aspiring Software Developer  </h2>
 		</div>
 		
 		 <div class="tab">
   			<button class="tablink" onclick="openTab(event, 'About')">About</button>
   			<button class="tablink" onclick="openTab(event, 'MySkills')">My Skills</button>
   			<button class="tablink" onclick="openTab(event, 'Resume')">Resume</button>
-			<!--<button class="tablink" onclick="openTab(event, 'Portfolio')">Portfolio</button>-->
+			<button class="tablink" onclick="openTab(event, 'Portfolio')">Portfolio</button>
   			<button class="tablink" onclick="openTab(event, 'Contact')">Contact</button>
-			
 		</div> 
 		
 		<div id="About" class="tabcontent">
 		<h1> Who Am I? </h1>
-			<p> My name is Nathan Goodman, and I go by Nate. I am an Information Technology Professional with a Bachelors of Science in Information Technology from Central Michigan University. I graduated in May of 2019 with a final, overall GPA of 3.04. I currently live in Davie, Florida, but I am originally from Muskegon, MI. I moved to Davie with my wife, Ariel, as she attends Nova Southeastern's Doctor of Optometry program. I have a great love all things technology. Currently, I work with Service Corporation International (SCI) as a Telecommunications Engineer and I am attending Southern New Hampshire University online, pursuing a master's degree in Information Technology with a concentration in Cyber Security. Some of my hobbies include lifting weights, playing golf, playing video games and reading. </p>
+			<p> My name is Nate Goodman I have a Bachelor's Degree in Information Technology from Central Michigan University and a Master's degree in Information Technology from Southern New Hampshire University </p>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
 		
 		<div id="MySkills" class="tabcontent">
 			<h1> My Skills </h1>
 			 	<ul>
-  					<li>Programming experience in multiple programming languages (in fact, this website was coded from scratch!)</li>
+  					<li>Programming experience in many languages</li>
   					<li>Networking and Telecommunications</li>
   					<li>Cyber Security</li>
   					<li>System Administration</li>
-  					<li>And more!</li>
 				</ul>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div> 
 		
 		<div id="Resume" class="tabcontent">
-			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/home?preview=Resume.pdf"target="_blank" style="color: #2EB1F8"> <span class="a"> View </span> </a> </h1>
+			<h1> Please click the following link to view my Resume: <a href="https://www.dropbox.com/scl/fi/j8gw5y4k4ij74d6ljhf96/Resume.docx?dl=0&rlkey=kt2n9aejkp97n1uipnl4omajc"target="_blank" style="color: #2EB1F8"> <span class="a"> View </span> </a> </h1>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 	        </div>
 		
-		<!-- not using this right now, keeping for possible use later
+		
 		<div id="Portfolio" class="tabcontent">
-			<h1> Below are links to other programming projects I have worked on </h1>
+			<h1> Live Programming Projects </h1>
 				<ul>
-					<li> <a href="https://pitathecat.com" style="color: #2EB1F8"> <span class="a"> Appreciation website for my cat, Pita (WIP) </li>
+					<li> <a href = https://discord.com/api/oauth2/authorize?client_id=912397138846187580&permissions=412317129792&scope=bot target="_blank" style="color: #2EB1F8"> <span class="a"> Beetlejuice from The Howard Stern Show Discord Bot</span> </a> </li>
+				</ul>
+			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
-		-->
 		
 	        <div id="Contact" class="tabcontent">
 			<h1> Contact Information </h1> 
 				<h3> <a href="https://www.linkedin.com/in/nathan-goodman-a81051142/" style="color: #2EB1F8"> <span class="a"> LinkedIn </span> </a> <a href="https://github.com/nategoodman88" style="color: #2EB1F8"> <span class="a"> GitHub </span> </a><a href="mailto:nategoodman88@gmail.com" style="color: #2EB1F8"> <span class ="a"> Email </span> </a> </h3>
 			<span onclick="this.parentElement.style.display='none'">x</span>
 		</div>
+		
+		<div class="hidden2">
+			<img src="images/Nate.jpg" alt= "Nate" style="width:100%; height:auto; margin:0 auto;">
+	    </div>
 		
 	</body>
 
