--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 align="center">Nate Goodman</h1>
         <p align="center">Aspiring Software Developer</p>
         <p align="Center">Phone: 231-724-0990 | Email: nategoodman88@gmail.com</p>
-        <p align="Center"><a href="https://www.dropbox.com/scl/fi/1ao2d3vosoev2t89s8ky6/Resume.docx?dl=0&rlkey=ydejru4p9sd9qqxiq1206p00a"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
+        <p align="Center"><a href="https://www.dropbox.com/scl/fi/j8gw5y4k4ij74d6ljhf96/Resume.docx?dl=0&rlkey=kt2n9aejkp97n1uipnl4omajc"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own DIV-->       
         <div>
             <img src = "images/Nate.png" class="headshot">
@@ -74,5 +74,12 @@
                     <td>System Administration</td>
             </tr>
         </table>
+
+        <h6><i>Portfolio</i></h6>
+            <ul>
+                <li><b>Movie Database API</b>
+                    <p>A flask API interacting with a MySQL database filled with the blu rays I own. The base site is located <a href="http://moviedatabaseapi-env.eba-drt3mnpz.us-east-2.elasticbeanstalk.com/"target="_blank" style="color: #2EB1F8"> <span> here </span></a> and a full list of commands can be found on my Github</p>
+                </li>
+            </ul>
     </body>
 </html>
