--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <!--Name in the heading with short descriptor on one line below it, phone and email contact on the next and finally a link to my resume on the next-->
     <body>
         <h1 align="center">Nate Goodman</h1>
-        <p align="center">Aspiring Software Developer</p>
+        <p align="center">Information Technology Professional</p>
         <p align="Center">Phone: 231-724-0990 | Email: nategoodman88@gmail.com</p>
-        <p align="Center"><a href="https://www.dropbox.com/scl/fi/j8gw5y4k4ij74d6ljhf96/Resume.docx?dl=0&rlkey=kt2n9aejkp97n1uipnl4omajc"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
+        <p align="Center"><a href="https://www.dropbox.com/scl/fi/bnqwo2yjkc2pc721cy5mz/Resume.docx?dl=0&rlkey=6ffzqp9c9c8ktvso3wd54qjli"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own DIV-->       
         <div>
             <img src = "images/Nate.png" class="headshot">
@@ -65,7 +65,6 @@
                 <th>Programming</th>
                     <td>HTML/CSS</td>
                     <td>Python</td>
-                    <td>C#</td>
             </tr>
             <tr>
                 <th>IT</th>
