--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h6><i>Portfolio</i></h6>
             <ul>
                 <li><b>Movie Database API</b>
-                    <p>A flask API interacting with a MySQL database filled with the blu rays I own. The base site is located <a href="http://moviedatabaseapi-env.eba-drt3mnpz.us-east-2.elasticbeanstalk.com/"target="_blank" style="color: #2EB1F8"> <span> here </span></a> and a full list of commands can be found on my Github</p>
+                    <p>*Note: Due to hosting costs this has temporaily been taken offline.* A flask API interacting with a MySQL database filled with the blu rays I own. The base site is located <a href="http://moviedatabaseapi-env.eba-drt3mnpz.us-east-2.elasticbeanstalk.com/"target="_blank" style="color: #2EB1F8"> <span> here </span></a> and a full list of commands can be found on my Github</p>
                 </li>
             </ul>
     </body>
