--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <hr>
 <!--A quick summary-->
         <h2><i>Summary</i></h2>
-        <p>I am an IT professional with a focused interest in networking and security. I am looking for a position that allows me to solidify corporate networks with best security principles and automation through Python programming</p>
+        <p>I am an IT professional with a focused interest in networking and security. I also enjoy Python programming and Web Development.</p>
 <!--List of previous jobs with a short sumary of the roles-->
         <h3><i>Job Experience</i></h3> 
             <ul>
