--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 align="center">Nate Goodman</h1>
         <p align="center">Information Technology Professional</p>
         <p align="Center">Phone: 231-724-0990 | Email: nategoodman88@gmail.com</p>
-        <p align="Center"><a href="https://www.dropbox.com/scl/fi/umfczqjrisilgn59zkk5f/Resume.docx?dl=0&rlkey=vqqa44clvbeacry493jnav3bf"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
+        <p align="Center"><a href="https://www.dropbox.com/scl/fi/t63juwvb34cb8lg0uabq6/Resume.docx?dl=0&rlkey=50tfgjpvlhwe0crsh62cx65pt"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own DIV-->       
         <div>
             <img src = "images/Nate.png" class="headshot">
@@ -65,6 +65,7 @@
                 <th>Programming</th>
                     <td>HTML/CSS</td>
                     <td>Python</td>
+                    <td>SQL</td>
             </tr>
             <tr>
                 <th>IT</th>
