--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
         <p>I am an IT professional with a focused interest in networking and security. I also enjoy Python programming and Web Development.</p>
 <!--List of previous jobs with a short sumary of the roles-->
         <h3><i>Job Experience</i></h3> 
-            <ul>
-                <li><b>Telecommunications Engineer - Service Corporation International | March 2021 - Present </b>
+                <li><b> Network Escalations Support Engineer| May 2022 - Present </b>
+                    <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico</p>
+                </li>
+                <li><b>Telecommunications Analyst - Service Corporation International | March 2021 - April 2022</b>
                     <p>Managed the install and operation of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico</p>
                 </li>
-                <li><b>Help Desk Analyst - Service Corporation International Direct | September 2019- March 2021 </b>
+                <li><b>Help Desk Analyst - Service Corporation International Direct | September 2019 - March 2021 </b>
                     <p>Supported hardware and software for users of 100+ locations. Managed user accounts and access</p>
                 </li>
-                <li><b>Technical Services Trainer - Central Michigan University | May 2018- May 2019 </b>
+                <li><b>Technical Services Trainer - Central Michigan University | May 2018 - May 2019 </b>
                     <p>Led and trained all incoming employees of the Technical Services team</p>
                 </li>
-                <li><b>Technical Services Tech - Central Michigan University | August 2017- May 2019 </b>
+                <li><b>Technical Services Tech - Central Michigan University | August 2017 - May 2019 </b>
                     <p>Supported staff and lab machines, deployed Windows OS images via SCCM and MAC OS images via Munki and created and deployed application packages </p>
                 </li>
                 <li><b>Cyber Security Intern - Central Michigan University | May 2018 - August 2018 </b>
