--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!--List of previous jobs with a short sumary of the roles-->
         <h3><i>Job Experience</i></h3> 
                 <li><b> Network Escalations Support Engineer| May 2022 - Present </b>
-                    <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico</p>
+                    <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico. Regional Lead of investigating issues on the East Coast.</p>
                 </li>
                 <li><b>Telecommunications Analyst - Service Corporation International | March 2021 - April 2022</b>
                     <p>Managed the install and operation of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico</p>
@@ -55,17 +55,19 @@
                 </li>
             </ul>
 <!--Brief overview of education-->
-        <h4><i>Education</i></h4>
+        <h4><i>Education/Certifications</i></h4>
             <ul>
                 <li>Master of Science in Information Technology - Southern New Hampshire University | December 2021</li>
                 <li>Bachelor of Science in Information Technology - Central Michigan University | May 2019</li>
+                <li>Security+</li
+                <li>CCNA</li>
             </ul>
 <!--Table of skills seperating the programming skills from the general IT skills-->
         <h5><i>Skills</i></h5>
         <table border="1">
             <tr>
                 <th>Programming</th>
-                    <td>HTML/CSS</td>
+                    <td>Front End Web Development</td>
                     <td>Python</td>
                     <td>SQL</td>
             </tr>
