--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <ul>
                 <li>Master of Science in Information Technology - Southern New Hampshire University | December 2021</li>
                 <li>Bachelor of Science in Information Technology - Central Michigan University | May 2019</li>
-                <li>Security+</li
+                <li>Security+</li>
                 <li>CCNA</li>
             </ul>
 <!--Table of skills seperating the programming skills from the general IT skills-->
