--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
 <!--List of previous jobs with a short sumary of the roles-->
         <h3><i>Job Experience</i></h3> 
                 <li><b> Network Escalations Support Engineer| May 2022 - Present </b>
-                    <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico. Regional Lead of investigating issues on the East Coast.</p>
+                    <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico. Supported SCI’s Cisco Meraki stack and Cisco Call Manager. Team lead on project to integrate AlertOps API into Cisco Meraki alerting. Regional Lead for east coast locations: oversaw 4 other employees on the team and directed them in the best actions to lead the support of all SCI locations in the east coast. Continued to make use of Wrike to track projects including disaster recovery after Hurricane Ian.</p>
                 </li>
                 <li><b>Telecommunications Analyst - Service Corporation International | March 2021 - April 2022</b>
-                    <p>Managed the install and operation of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico</p>
+                    <p>Managed the install, stability, conversion and upgrade of data circuits and phone lines for 2,000+ locations in the United States, Canada and Puerto Rico. Tracked all conversion and upgrades in project managing software Wrike.</p>
                 </li>
                 <li><b>Help Desk Analyst - Service Corporation International Direct | September 2019 - March 2021 </b>
-                    <p>Supported hardware and software for users of 100+ locations. Managed user accounts and access</p>
+                    <p>Supported hardware and software for users of 100+ locations. Managed user accounts and access. Participated in low-level networking and telephony troubleshooting before passing up to the next team</p>
                 </li>
                 <li><b>Technical Services Trainer - Central Michigan University | May 2018 - May 2019 </b>
-                    <p>Led and trained all incoming employees of the Technical Services team</p>
+                    <p>Led and trained all incoming employees of the Technical Services team. Kept track of the learning progress of each team member and scheduled goals for them.</p>
                 </li>
                 <li><b>Technical Services Tech - Central Michigan University | August 2017 - May 2019 </b>
-                    <p>Supported staff and lab machines, deployed Windows OS images via SCCM and MAC OS images via Munki and created and deployed application packages </p>
+                    <p>Supported staff and lab machines, deployed Windows OS images via SCCM and MAC OS images via Munki and created and deployed application packages.</p>
                 </li>
                 <li><b>Cyber Security Intern - Central Michigan University | May 2018 - August 2018 </b>
-                    <p>Updated the user training on Phishing. Investigated compromised user accounts and Phishing emails </p>
+                    <p>Updated the user training on Phishing. Investigated compromised user accounts and Phishing emails. Pursued and tracked the progress of investigations in a waterfall approach</p>
                 </li>
                 <li><b>Computer Repair Technician - Central Michigan University | May 2018 - August 2018 </b>
-                    <p>Supported hardware and software of student machines. Participated in direct hardware repair such as full-board replacement </p>
+                    <p>Supported hardware and software of student machines. Participated in direct hardware repair such as full-board replacement.</p>
                 </li>
             </ul>
 <!--Brief overview of education-->
