--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <th>IT</th>
                     <td>Telecommunications/Networking</td>
                     <td>Cyber Security</td>
-                    <td>System Administration</td>
+                    <td>Project Management</td>
             </tr>
         </table>
 
