--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <li class= "flex-item"><a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"> <img src ="images/LinkedIn.png" class ="contact-icon"></a></li>
             <li class= "flex-item"><a href="https://github.com/nategoodman88"> <img  src ="images/Github.png" class ="contact-icon"></a></li>
         </ol>
-<!--Second container/list for button and view counter to sit side by side-->
-        <ol class = "flex-container2">
-            <!--Button that calls the swapMode function in the attached Javascript file to change between dark mode and normal-->
-            <li class = "flex-item2"> 
+<!--Second container/list for button and view counter to sit side by side
+        <ol class = "flex-container2">-->
+            <!--Button that calls the swapMode function in the attached Javascript file to change between dark mode and normal
+            <li class = "flex-item2"> -->
                 <button onclick="onClick()" class="button" role="button">Dark Mode On/Off</button>
-            </li>
+            <!--</li>-->
             <!--Views contatiner, shows page views, WIP
             <li class = "flex-item2">
                 <div class="viewsContainer" id="viewsCount">
