--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Nate Goodman</title> 
         <link rel="stylesheet" type="text/css" href="Style.css">
         <link rel="shortcut icon" type="image/ico" href="images/computer.ico">  
+        <script src = "Script.js" defer></script>
     </head>
 <!--Name in the heading with short descriptor on one line below it, phone and email contact on the next and finally a link to my resume on the next-->
     <body>
@@ -97,8 +98,4 @@
                 </li>
             </ul>
     </body>
-    <!--Call JS file-->
-    <footer>
-        <script src = "Script.js"></script>
-    </footer>
 </html>
