--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
 <!--Portfolio list-->
         <h6><i>Portfolio</i></h6>
             <ul>
-                <li><b>Movie Database API</b>
-                    <p>*Note: Due to hosting costs this has temporaily been taken offline.* A flask API interacting with a MySQL database filled with the blu rays I own. The base site is located <a href="http://moviedatabaseapi-env.eba-drt3mnpz.us-east-2.elasticbeanstalk.com/"target="_blank" style="color: #2EB1F8"> <span> here </span></a> and a full list of commands can be found on my Github*</p>
+                <li><b>Movie Database API - Python Flask project</b>
+                    <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. Github code:<a href=  https://github.com/nategoodman88/DatabaseAPI target="_blank" style="color: #2EB1F8"></a></p>
                 </li>
+                <li>nategoodmandev API - Node JS project</li>
+                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. Github code:<a href=  https://github.com/nategoodman88/nategoodmandevapi target="_blank" style="color: #2EB1F8"></a></p>
             </ul>
     </body>
 </html>
