--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <h6><i>Portfolio</i></h6>
             <ul>
                 <li><b>Movie Database API - Python Flask project</b>
-                    <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. Github code:<a href=  https://github.com/nategoodman88/DatabaseAPI target="_blank" style="color: #2EB1F8"></a></p>
+                    <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. Github code:<a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"></a></p>
                 </li>
-                <li>nategoodmandev API - Node JS project</li>
-                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. Github code:<a href=  https://github.com/nategoodman88/nategoodmandevapi target="_blank" style="color: #2EB1F8"></a></p>
+                <li><b>nategoodmandev API - Node JS project</b></li>
+                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. Github code:<a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"></a></p>
             </ul>
     </body>
 </html>
