--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS.<a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span>Github code</span></a></p>
                 </li>
                 <li><b>nategoodmandev API - Node JS project</b></li>
-                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span>Github code</span></a></p>
+                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab.<a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span>Github code</span></a></p>
             </ul>
     </body>
 </html>
