--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <hr>
 <!--A quick summary-->
         <h2><i>Summary</i></h2>
-        <p>I am an IT professional with a focused interest in networking and security. I also enjoy Python programming and Web Development.</p>
+        <p>I am an IT Networking Professional looking to change paths to a Software Development/DevOps role</p>
 <!--List of previous jobs with a short sumary of the roles-->
         <h3><i>Job Experience</i></h3> 
                 <li><b> Network Escalations Support Engineer| May 2022 - Present </b>
@@ -66,7 +66,7 @@
         <table border="1">
             <tr>
                 <th>Programming</th>
-                    <td>Front End Web Development</td>
+                    <td>Web Development</td>
                     <td>Python</td>
                     <td>SQL</td>
             </tr>
@@ -81,10 +81,10 @@
         <h6><i>Portfolio</i></h6>
             <ul>
                 <li><b>Movie Database API - Python Flask project</b>
-                    <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS.<a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span>Github code</span></a></p>
+                    <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS.<a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
                 </li>
                 <li><b>nategoodmandev API - Node JS project</b></li>
-                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab.<a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span>Github code</span></a></p>
+                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab.<a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
             </ul>
     </body>
 </html>
