--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
                 </li>
                 <li><b>nategoodmandev API - Node JS project</b></li>
                     <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab.<a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
-                    <li><b>Gorbo Studios Website</b></li>
-                    <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://github.com/nategoodman88/gorbostudios.com/tree/main" target="_blank" style="color: #2EB1F8"><span> My Github fork</span></a></p>
+                <li><b>Gorbo Studios Website</b></li>
+                    <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
+                <li><b>To Do List App</b></li>
+                    <p>A To Do List app created with Quasar framework. Currently implementing a backend with Diectus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
             </ul>
     </body>
 </html>
