--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
                     <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
                 <li><b>Gorbo Studios Website</b></li>
                     <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com" target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
-                <li><b>To Do List App</b></li>
+                <li><b>To Do List App - VueJS/Quasar Framework Project </b></li>
                     <p>A To Do List app created with Quasar framework. Currently implementing a backend with Diectus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                <li><b>Doe Web Scraper API - Node JS Project </b></li>
+                    <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. Very Early WIP <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
             </ul>
     </body>
 </html>
