--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <li><b>To Do List App - VueJS/Quasar Framework Project </b></li>
                     <p>A To Do List app created with Quasar framework. Currently implementing a backend with Diectus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Doe Web Scraper API - Node JS Project </b></li>
-                    <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. Very Early WIP <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                    <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. WIP. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
             </ul>
     </body>
 </html>
