--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
         <table border="1">
             <tr>
                 <th>Programming</th>
-                    <td>Web Development</td>
+                    <td>HTML, CSS, Javascript</td>
                     <td>Python</td>
                     <td>SQL</td>
             </tr>
             <tr>
-                <th>IT</th>
+                <th>DevOps</th>
                     <td>Telecommunications/Networking</td>
-                    <td>Cyber Security</td>
-                    <td>Project Management</td>
+                    <td>Github, Gitlab, Docker</td>
+                    <td>AWS</td>
             </tr>
         </table>
         <h6><i>Portfolio</i></h6>
