--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h5><i>Skills</i></h5>
         <table border="1">
             <tr>
-                <th>Programming</th>
+                <th>Dev</th>
                     <td>Web Development</td>
                     <td>Python</td>
                     <td>C#</td>
